[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutil"
version = "0.1.0"
description = "A PyForge Ecosytem Python project"
authors = [{name = "Aidan Hogg", email = "aidan.hogg@dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "cachetools",
    "pydantic"
]

[project.urls]
Homepage = "https://open.dirtywork.solutions/pythings"
Documentation = "https://open.dirtywork.solutions/pythings/docs"
Source = "https://github.com/DirtyWork-Solutions/PyThings"
Issues = "https://github.com/DirtyWork-Solutions/PyThings/tree/main/.github/ISSUE_TEMPLATE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.extension]
name = "pythings.extension"
sources = ["src/pythings/extension.c"]