[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutile"
version = "0.1.1"
description = "A PyForge Ecosytem Python project"
authors = [{name = "DirtyWork Solutions Limited", email = "pyutile@open.dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "cachetools",
    "pydantic",
    "configparser",
    "pyyaml",
    "omegaconf",
    "loguru"
]

[project.urls]
Homepage = "https://open.dirtywork.solutions/pytuil/"
Documentation = "https://open.dirtywork.solutions/pytuil/docs"
Source = "https://github.com/DirtyWork-Solutions/pytuil"
Issues = "https://github.com/DirtyWork-Solutions/pytuil/tree/main/.github/ISSUE_TEMPLATE"

