[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutile"
version = "0.1.1"
description = "A PyForge Ecosytem Python project"
authors = [{name = "DirtyWork Solutions Limited", email = "pyutile@open.dirtywork.solutions"}]
license = {file = "LICENSE"}
readme = "README.md"


[project.urls]
Homepage = "https://open.dirtywork.solutions/pytuile/"
Documentation = "https://open.dirtywork.solutions/pytuile/docs"
Source = "https://github.com/DirtyWork-Solutions/pytuil"
Issues = "https://github.com/DirtyWork-Solutions/pytuil/tree/main/.github/ISSUE_TEMPLATE"

